--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Unite2"
         tools:targetApi="31">
         <activity
+            android:name=".Activity_ss_64"
+            android:exported="false" />
+        <activity
+            android:name=".Uyg4Activity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
