--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Unite2"
         tools:targetApi="31">
         <activity
+            android:name=".SS65"
+            android:exported="false" />
+        <activity
             android:name=".Activity_ss_64"
             android:exported="false" />
         <activity
